--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.jdk_version = JavaVersion.VERSION_1_8
+    ext.kotlin_stdlib_version = "1.4.10"
+    ext.kotlin_coroutines_version = "1.4.2"
+    ext.firebase_version = "26.1.0"
+    ext.okhttp_version = "4.9.0"
+    ext.retrofit_version = "2.9.0"
+    ext.rx_java_version = "3.0.7"
+    ext.rx_kotlin_version = "3.0.1"
+    ext.rx_android_version = "3.0.0"
+    ext.navigation_version = "2.3.1"
+    ext.lifecycle_version = "2.2.0"
+    ext.room_version = "2.3.0-alpha03"
+    ext.workManager_version = "2.4.0"
     repositories {
         google()
         jcenter()
@@ -7,7 +20,6 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.0-alpha03"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
